Expand drug education learning content
